--- a/bin/view/CRUD_Agenda.fxml
+++ b/bin/view/CRUD_Agenda.fxml
@@ -115,14 +115,15 @@
             </Label>
             <HBox>
                <children>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../model/resources/searchIcon.jpg" />
-                     </image>
-                     <HBox.margin>
-                        <Insets right="5.0" top="3.0" />
-                     </HBox.margin>
-                  </ImageView>
+                  <Button mnemonicParsing="false" onAction="#onAction" onKeyTyped="#onEnter">
+                     <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../model/resources/searchIcon.jpg" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                   <TextField prefWidth="509.0">
                      <font>
                         <Font size="16.0" />
