--- a/src/view/Atualizar_Funcionario.fxml
+++ b/src/view/Atualizar_Funcionario.fxml
@@ -35,13 +35,13 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Line>
-                  <Label text="Nome">
+                  <Label text="*Nome">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
                   <TextField fx:id="nome" prefWidth="465.0" />
-                  <Label text="CPF">
+                  <Label text="*CPF">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -54,7 +54,7 @@
                         <Font size="14.0" />
                      </font>
                   </MaskedTextField>
-                  <Label text="Data de nascimento">
+                  <Label text="*Data de nascimento">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -81,7 +81,7 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Line>
-                  <Label text="Endereço completo">
+                  <Label text="*Endereço completo">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -91,7 +91,7 @@
                         <Font size="16.0" />
                      </font>
                   </TextArea>
-                  <Label text="CEP">
+                  <Label text="*CEP">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -171,12 +171,12 @@
                   </Line>
                   <ToggleButtonGroup selectionType="SINGLE">
                      <toggles>
-                        <RadioButton fx:id="radioButtonMedico" mnemonicParsing="false" text="Médico">
+                        <RadioButton fx:id="radioButtonMedico" mnemonicParsing="false" onAction="#enableCrm" text="Médico">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="radioButtonAtendente" mnemonicParsing="false" text="Atendente">
+                        <RadioButton fx:id="radioButtonAtendente" mnemonicParsing="false" onAction="#disableCrm" selected="true" text="Atendente">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -186,6 +186,15 @@
                         </RadioButton>
                      </toggles>
                   </ToggleButtonGroup>
+                  <Label text="*CRM">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <MaskedTextField fx:id="crm" />
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
                         <Button fx:id="saveButton" mnemonicParsing="false" onAction="#updateData" prefHeight="37.0" prefWidth="150.0" text="Salvar">
