--- a/src/view/Cadastro_Funcionario.fxml
+++ b/src/view/Cadastro_Funcionario.fxml
@@ -35,7 +35,7 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Line>
-                  <Label text="Nome">
+                  <Label text="*Nome">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -43,7 +43,7 @@
                   <TextField fx:id="nome" prefWidth="465.0" promptText="João Maria José">
                   
                   </TextField>
-                  <Label text="CPF">
+                  <Label text="*CPF">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -56,7 +56,7 @@
 	                       <Font size="14.0" />
 	                 </font>
                   </MaskedTextField>
-                  <Label text="Data de nascimento">
+                  <Label text="*Data de nascimento">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -78,7 +78,7 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Line>
-                  <Label text="Endereço completo">
+                  <Label text="*Endereço completo">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -88,7 +88,7 @@
                         <Font size="16.0" />
                      </font>
                   </TextArea>
-                  <Label text="CEP">
+                  <Label text="*CEP">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -168,12 +168,12 @@
                      </VBox.margin></Line>
                   <ToggleButtonGroup selectionType="SINGLE">
                       <toggles>
-                        <RadioButton fx:id="radioButtonMedico" mnemonicParsing="false" text="Médico">
+                        <RadioButton fx:id="radioButtonMedico" mnemonicParsing="false" onAction="#enableCrm" text="Médico">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="radioButtonAtendente" mnemonicParsing="false" text="Atendente">
+                        <RadioButton fx:id="radioButtonAtendente" mnemonicParsing="false" selected="true" text="Atendente">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -183,6 +183,15 @@
                         </RadioButton>
                       </toggles>
                   </ToggleButtonGroup>
+                  <Label text="*CRM">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <MaskedTextField fx:id="crm" mask="#########" />
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
                         <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveData" prefHeight="37.0" prefWidth="150.0" text="Salvar">
