--- a/src/view/Cadastro_Paciente.fxml
+++ b/src/view/Cadastro_Paciente.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import src.MaskedTextField?>
 
-<BorderPane fx:id="cadastroFuncionarioPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Cadastro_Funcionario">
+<BorderPane fx:id="cadastroFuncionarioPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Cadastro_Paciente">
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
          <content>
@@ -34,13 +34,13 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Line>
-                  <Label text="Nome">
+                  <Label text="*Nome">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <TextField prefWidth="465.0" promptText="João Maria José" />
-                  <Label text="CPF">
+                  <TextField fx:id="nome" prefWidth="465.0" promptText="João Maria José" />
+                  <Label text="*CPF">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -48,12 +48,12 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <MaskedTextField mask="###.###.###-##" plainText="">
+                  <MaskedTextField fx:id="cpf" mask="###.###.###-##" plainText="">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </MaskedTextField>
-                  <Label text="Data de nascimento">
+                  <Label text="*Data de nascimento">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -61,7 +61,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <DatePicker />
+                  <DatePicker fx:id="dataNasc" />
                   <Label text="Endereço">
                      <font>
                         <Font name="Impact" size="28.0" />
@@ -75,17 +75,17 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Line>
-                  <Label text="Endereço completo">
+                  <Label text="*Endereço completo">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <TextArea prefHeight="74.0" prefWidth="441.0" wrapText="true">
+                  <TextArea fx:id="endereco" prefHeight="74.0" prefWidth="441.0" wrapText="true">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </TextArea>
-                  <Label text="CEP">
+                  <Label text="*CEP">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -93,7 +93,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <MaskedTextField mask="#####-###" plainText="">
+                  <MaskedTextField fx:id="cep" mask="#####-###" plainText="" text="_____-___">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -119,7 +119,7 @@
                         <Insets />
                      </VBox.margin>
                   </Label>
-                  <MaskedTextField mask="(##) 9####-####" plainText="">
+                  <MaskedTextField fx:id="cel" mask="(##) 9####-####" plainText="">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -132,7 +132,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <MaskedTextField mask="(##) ####-####" plainText="">
+                  <MaskedTextField fx:id="tel" mask="(##) ####-####" plainText="">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -145,7 +145,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField prefWidth="441.0">
+                  <TextField fx:id="email" prefWidth="441.0">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -153,7 +153,7 @@
                   <ToggleButtonGroup selectionType="SINGLE" />
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="150.0" text="Salvar">
+                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveData" prefHeight="37.0" prefWidth="150.0" text="Salvar">
                            <font>
                               <Font size="16.0" />
                            </font>
