--- a/src/view/Agenda_Atendente.fxml
+++ b/src/view/Agenda_Atendente.fxml
@@ -3,7 +3,6 @@
 <?import com.gluonhq.charm.glisten.control.ToggleButtonGroup?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -26,10 +25,10 @@
             </Label>
             <Label text="Modo de exibição">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="28.0" />
                </font>
                <VBox.margin>
-                  <Insets top="30.0" />
+                  <Insets top="50.0" />
                </VBox.margin>
             </Label>
             <ToggleButtonGroup selectionType="SINGLE">
@@ -39,7 +38,7 @@
                         <Font size="16.0" />
                      </font>
                   </RadioButton>
-                  <RadioButton mnemonicParsing="false" text="Tabela">
+                  <RadioButton mnemonicParsing="false" selected="true" text="Tabela">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -52,22 +51,9 @@
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </ToggleButtonGroup>
-            <Label text="Ordernar por:">
-               <font>
-                  <Font name="Impact" size="18.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="50.0" />
-               </VBox.margin>
-            </Label>
-            <ComboBox prefWidth="150.0">
-               <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
-               </VBox.margin>
-            </ComboBox>
             <Label text="Filtrar por:">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="28.0" />
                </font>
                <VBox.margin>
                   <Insets top="50.0" />
@@ -75,7 +61,7 @@
             </Label>
             <Label text="Paciente">
                <font>
-                  <Font size="14.0" />
+                  <Font size="18.0" />
                </font>
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
@@ -88,20 +74,20 @@
             </TextField>
             <Label text="Data">
                <font>
-                  <Font size="14.0" />
+                  <Font size="18.0" />
                </font>
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <DatePicker>
+            <DatePicker fx:id="datePicker">
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </DatePicker>
             <Label text="Médico">
                <font>
-                  <Font size="14.0" />
+                  <Font size="18.0" />
                </font>
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
@@ -120,11 +106,11 @@
    <right>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <TableView prefHeight="478.0" prefWidth="595.0">
+            <TableView fx:id="tableConsulta" prefHeight="478.0" prefWidth="595.0">
                <columns>
-                  <TableColumn prefWidth="108.0" text="Data" />
-                  <TableColumn prefWidth="174.0" text="Paciente" />
-                  <TableColumn minWidth="0.0" prefWidth="132.0" text="Médico" />
+                  <TableColumn fx:id="dateCol" prefWidth="100.0" text="Data" />
+                  <TableColumn fx:id="pacCol" prefWidth="247.0" text="Paciente" />
+                  <TableColumn fx:id="medCol" minWidth="0.0" prefWidth="247.0" text="Médico" />
                </columns>
                <VBox.margin>
                   <Insets bottom="10.0" />
