--- a/src/view/Atendente.fxml
+++ b/src/view/Atendente.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,41 +8,41 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="atendentePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Atendente">
+<BorderPane fx:id="atendentePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Atendente">
    <top>
-      <Label prefHeight="40.0" prefWidth="212.0" text="Atendente" BorderPane.alignment="CENTER_LEFT">
+      <Label prefHeight="40.0" prefWidth="212.0" text="ATENDENTE" BorderPane.alignment="CENTER_LEFT">
          <font>
-            <Font name="Impact" size="35.0" />
+            <Font name="Impact" size="40.0" />
          </font>
          <BorderPane.margin>
-            <Insets left="20.0" top="10.0" />
+            <Insets left="30.0" top="10.0" />
          </BorderPane.margin>
       </Label>
    </top>
-   <right>
-      <VBox fx:id="vbox" prefHeight="346.0" prefWidth="180.0" BorderPane.alignment="CENTER">
+   <left>
+      <VBox fx:id="vbox" prefHeight="316.0" prefWidth="246.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#loadAgendaView" prefHeight="60.0" prefWidth="213.0" text="Ver agenda">
+            <Button mnemonicParsing="false" onAction="#loadAgendaView" prefHeight="60.0" prefWidth="270.0" styleClass="primary" text="AGENDA">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <Region prefHeight="30.0" prefWidth="212.0" />
-            <Button mnemonicParsing="false" onAction="#loadCRUD_PacienteView" prefHeight="60.0" prefWidth="212.0" text="Gerenciar pacientes">
+            <Button mnemonicParsing="false" onAction="#loadCRUD_PacienteView" prefHeight="60.0" prefWidth="289.0" styleClass="primary" text="PACIENTES">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <Region prefHeight="30.0" prefWidth="212.0" />
-            <Button mnemonicParsing="false" onAction="#loadLoginView" prefHeight="60.0" prefWidth="212.0" text="Sign out">
+            <Button mnemonicParsing="false" onAction="#loadLoginView" prefHeight="60.0" prefWidth="270.0" styleClass="secondary" text="LOG OUT">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
          </children>
          <BorderPane.margin>
-            <Insets right="20.0" />
+            <Insets left="20.0" right="20.0" top="30.0" />
          </BorderPane.margin>
       </VBox>
-   </right>
+   </left>
 </BorderPane>
