--- a/src/view/Cadastro_Consulta.fxml
+++ b/src/view/Cadastro_Consulta.fxml
@@ -73,12 +73,12 @@
                   <DatePicker />
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="150.0" text="Salvar">
+                        <Button styleClass="primary_blue" mnemonicParsing="false" prefHeight="37.0" prefWidth="150.0" text="Salvar">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </Button>
-                        <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeView" prefHeight="37.0" prefWidth="150.0" text="Cancelar">
+                        <Button styleClass="danger" mnemonicParsing="false" onAction="#closeView" prefHeight="37.0" prefWidth="150.0" text="Cancelar">
                            <font>
                               <Font size="16.0" />
                            </font>
