Make CRUD_Agenda work

--- a/src/view/style.css
+++ b/src/view/style.css
@@ -21,7 +21,7 @@
         #a0ada3,
         linear-gradient(to right, #777, #999);
     -fx-background-radius: 50;
-    -fx-padding: 15 30 15 30;
+    -fx-padding: 12 25 12 25;
     -fx-font-family: "Impact";
     -fx-font-size: 24px;
     -fx-text-fill: #EEE;
@@ -30,10 +30,10 @@
 .primary {
     -fx-background-color: 
         #a0ada3,
-        linear-gradient(to right, #649650, #73b05b 90%);
+        linear-gradient(to right, #649650, #6aa353 90%);
     -fx-background-radius: 50;
     -fx-font-family: "Impact";
-    -fx-padding: 15 30 15 30;
+    -fx-padding: 12 25 12 25;
     -fx-font-size: 24px;
     -fx-text-fill: #EEE;
 }
@@ -41,10 +41,10 @@
 .danger {
     -fx-background-color: 
         #a0ada3,
-        linear-gradient(to right, #d10a0a, ##f20f0f 90%);
+        linear-gradient(to right, #d10a0a, #f20f0f 90%);
     -fx-background-radius: 50;
     -fx-font-family: "Impact";
-    -fx-padding: 15 30 15 30;
+    -fx-padding: 12 25 12 25;
     -fx-font-size: 24px;
     -fx-text-fill: #EEE;
 }
@@ -55,7 +55,7 @@
         linear-gradient(to right, #649650, #73b05b 90%);
     -fx-background-radius: 50;
     -fx-font-family: "Impact";
-    -fx-padding: 15 30 15 30;
+    -fx-padding: 12 25 12 25;
     -fx-font-size: 24px;
     -fx-text-fill: #EEE;
 }
