--- a/src/view/Agenda_Admin.fxml
+++ b/src/view/Agenda_Admin.fxml
@@ -3,7 +3,6 @@
 <?import com.gluonhq.charm.glisten.control.ToggleButtonGroup?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -11,6 +10,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -28,7 +28,7 @@
                   <Font name="Impact" size="28.0" />
                </font>
                <VBox.margin>
-                  <Insets top="30.0" />
+                  <Insets top="50.0" />
                </VBox.margin>
             </Label>
             <ToggleButtonGroup selectionType="SINGLE">
@@ -51,25 +51,12 @@
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </ToggleButtonGroup>
-            <Label text="Ordernar por:">
-               <font>
-                  <Font name="Impact" size="28.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="30.0" />
-               </VBox.margin>
-            </Label>
-            <ComboBox prefWidth="150.0">
-               <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
-               </VBox.margin>
-            </ComboBox>
             <Label text="Filtrar por:">
                <font>
                   <Font name="Impact" size="28.0" />
                </font>
                <VBox.margin>
-                  <Insets top="30.0" />
+                  <Insets top="50.0" />
                </VBox.margin>
             </Label>
             <Label text="Paciente">
@@ -125,15 +112,22 @@
                   <TableColumn fx:id="pacCol" prefWidth="247.0" text="Paciente" />
                   <TableColumn fx:id="medCol" minWidth="0.0" prefWidth="247.0" text="Médico" />
                </columns>
-            </TableView>
-            <Button styleClass="secondary" mnemonicParsing="false" onAction="#loadAdministradorView" prefHeight="25.0" prefWidth="322.0" styleClass="secondary" text="Retornar">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets bottom="10.0" />
                </VBox.margin>
-            </Button>
+            </TableView>
+            <HBox prefHeight="13.0" prefWidth="595.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#loadAdministradorView" prefWidth="300.0" styleClass="secondary" text="Retornar">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="100.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
