--- a/src/view/CRUD_Agenda.fxml
+++ b/src/view/CRUD_Agenda.fxml
@@ -54,7 +54,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField disable="true" editable="false" />
+            <TextField fx:id="selectedPac1" disable="true" editable="false" />
             <Button mnemonicParsing="false" onAction="#loadAtualizar_ConsultaView" prefHeight="25.0" prefWidth="242.0" styleClass="primary_blue" text="Prosseguir">
                <font>
                   <Font size="16.0" />
@@ -87,8 +87,8 @@
                   <Insets top="10.0" />
                </VBox.margin>
             </Label>
-            <TextField disable="true" editable="false" />
-            <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="162.0" styleClass="danger" text="Deletar">
+            <TextField fx:id="selectedPac2" disable="true" editable="false" />
+            <Button mnemonicParsing="false" onAction="#deleteData" prefHeight="37.0" prefWidth="162.0" styleClass="danger" text="Deletar">
                <font>
                   <Font size="16.0" />
                </font>
@@ -131,7 +131,7 @@
                   </TextField>
                </children>
             </HBox>
-            <TableView fx:id="tableConsulta">
+            <TableView fx:id="tableConsulta" onMouseClicked="#showPac">
                <columns>
                   <TableColumn fx:id="dateCol" prefWidth="100.0" text="Data" />
                   <TableColumn fx:id="pacCol" minWidth="0.0" prefWidth="247.0" text="Paciente" />
