--- a/src/view/Agenda_Admin.fxml
+++ b/src/view/Agenda_Admin.fxml
@@ -5,16 +5,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="agendaPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Agenda_Admin">
+<BorderPane fx:id="agendaPane" prefHeight="567.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Agenda_Admin">
    <left>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -23,58 +23,39 @@
                   <Font name="Impact" size="32.0" />
                </font>
             </Label>
-            <Label text="Modo de exibição">
-               <font>
-                  <Font name="Impact" size="28.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="50.0" />
-               </VBox.margin>
-            </Label>
             <ToggleButtonGroup selectionType="SINGLE">
-                <toggles>
-                  <RadioButton mnemonicParsing="false" text="Calendário">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton mnemonicParsing="false" selected="true" text="Tabela">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                     <padding>
-                        <Insets left="20.0" />
-                     </padding>
-                  </RadioButton>
-                </toggles>
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </ToggleButtonGroup>
+            <Line endX="134.2928924560547" endY="0.20710831880569458" startX="-100.0" />
             <Label text="Filtrar por:">
                <font>
                   <Font name="Impact" size="28.0" />
                </font>
                <VBox.margin>
-                  <Insets top="50.0" />
+                  <Insets top="40.0" />
                </VBox.margin>
             </Label>
             <Label text="Paciente">
                <font>
-                  <Font size="18.0" />
+                  <Font size="20.0" />
                </font>
                <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
+                  <Insets left="10.0" top="20.0" />
                </VBox.margin>
             </Label>
-            <TextField prefWidth="189.0">
+            <TextField fx:id="searchPac" prefWidth="189.0">
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </TextField>
             <Label text="Data">
                <font>
-                  <Font size="18.0" />
+                  <Font size="20.0" />
                </font>
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
@@ -87,16 +68,19 @@
             </DatePicker>
             <Label text="Médico">
                <font>
-                  <Font size="18.0" />
+                  <Font size="20.0" />
                </font>
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <TextField prefWidth="189.0">
+            <TextField fx:id="searchMed" prefWidth="189.0">
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
-               </VBox.margin></TextField>
+               </VBox.margin>
+               <font>
+                  <Font size="14.0" />
+               </font></TextField>
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -104,13 +88,13 @@
       </VBox>
    </left>
    <right>
-      <VBox BorderPane.alignment="CENTER">
+      <VBox prefHeight="527.0" prefWidth="623.0" BorderPane.alignment="CENTER">
          <children>
             <TableView fx:id="tableConsulta" prefHeight="478.0" prefWidth="595.0">
                <columns>
                   <TableColumn fx:id="dateCol" prefWidth="100.0" text="Data" />
-                  <TableColumn fx:id="pacCol" prefWidth="247.0" text="Paciente" />
-                  <TableColumn fx:id="medCol" minWidth="0.0" prefWidth="247.0" text="Médico" />
+                  <TableColumn fx:id="pacCol" prefWidth="262.0" text="Paciente" />
+                  <TableColumn fx:id="medCol" minWidth="0.0" prefWidth="260.0" text="Médico" />
                </columns>
                <VBox.margin>
                   <Insets bottom="10.0" />
@@ -123,7 +107,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="100.0" />
+                        <Insets />
                      </HBox.margin>
                   </Button>
                </children>
