--- a/src/view/Atualizar_Consulta.fxml
+++ b/src/view/Atualizar_Consulta.fxml
@@ -73,7 +73,7 @@
                   <DatePicker fx:id="datePicker" />
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#updateData" prefHeight="37.0" prefWidth="150.0" styleClass="primary_blue" text="Salvar">
+                        <Button mnemonicParsing="false" onAction="#updateData" prefHeight="37.0" prefWidth="150.0" styleClass="primary" text="Salvar">
                            <font>
                               <Font size="16.0" />
                            </font>
