--- a/src/view/CRUD_Agenda.fxml
+++ b/src/view/CRUD_Agenda.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -115,7 +116,7 @@
             </Label>
             <HBox>
                <children>
-                  <Button mnemonicParsing="false">
+                  <Button mnemonicParsing="false" onAction="#searchDate">
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -124,11 +125,11 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <TextField prefWidth="509.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </TextField>
+                  <DatePicker fx:id="searchDate" prefHeight="33.0" prefWidth="188.0">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </DatePicker>
                </children>
             </HBox>
             <TableView fx:id="tableConsulta" onMouseClicked="#showPac">
