--- a/src/view/Cadastro_Paciente.fxml
+++ b/src/view/Cadastro_Paciente.fxml
@@ -153,7 +153,7 @@
                   <ToggleButtonGroup selectionType="SINGLE" />
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#saveData" prefHeight="37.0" prefWidth="150.0" styleClass="primary_blue" text="Salvar">
+                        <Button mnemonicParsing="false" onAction="#saveData" prefHeight="37.0" prefWidth="150.0" styleClass="primary" text="Salvar">
                            <font>
                               <Font size="16.0" />
                            </font>
