--- a/src/view/CRUD_Agenda.fxml
+++ b/src/view/CRUD_Agenda.fxml
@@ -26,7 +26,7 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <Button mnemonicParsing="false" onAction="#loadCadastro_ConsultaView" prefHeight="25.0" prefWidth="236.0" styleClass="primary_blue" text="Prosseguir">
+            <Button mnemonicParsing="false" onAction="#loadCadastro_ConsultaView" prefHeight="25.0" prefWidth="236.0" styleClass="primary" text="Prosseguir">
                <font>
                   <Font size="16.0" />
                </font>
@@ -56,7 +56,7 @@
                </font>
             </Label>
             <TextField fx:id="selectedPac1" disable="true" editable="false" />
-            <Button mnemonicParsing="false" onAction="#loadAtualizar_ConsultaView" prefHeight="25.0" prefWidth="242.0" styleClass="primary_blue" text="Prosseguir">
+            <Button mnemonicParsing="false" onAction="#loadAtualizar_ConsultaView" prefHeight="25.0" prefWidth="242.0" styleClass="primary" text="Prosseguir">
                <font>
                   <Font size="16.0" />
                </font>
