--- a/bin/view/Atualizar_Funcionario.fxml
+++ b/bin/view/Atualizar_Funcionario.fxml
@@ -197,12 +197,12 @@
                   <MaskedTextField fx:id="crm" disable="true" mask="#########" />
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
-                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#updateData" prefHeight="37.0" prefWidth="150.0" text="Salvar">
+                        <Button mnemonicParsing="false" onAction="#updateData" prefHeight="37.0" prefWidth="150.0" styleClass="primary" text="Salvar">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </Button>
-                        <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeView" prefHeight="37.0" prefWidth="150.0" text="Cancelar">
+                        <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeView" prefHeight="37.0" prefWidth="150.0" styleClass="danger" text="Cancelar">
                            <font>
                               <Font size="16.0" />
                            </font>
