--- a/bin/view/Login.fxml
+++ b/bin/view/Login.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -15,9 +10,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="LoginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="344.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Login">
+<BorderPane fx:id="LoginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="344.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Login">
    <right>
-      <ImageView fitHeight="344.0" fitWidth="517.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fitHeight="344.0" fitWidth="485.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
             <Image url="@../model/resources/loginImage.jpg" />
          </image>
@@ -26,9 +21,9 @@
    <left>
       <Pane prefHeight="300.0" prefWidth="362.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="109.0" fitWidth="309.0" layoutX="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../model/resources/saudeLogo.png" />
+                  <Image url="@../model/resources/logo.png" />
                </image>
             </ImageView>
             <Label layoutX="14.0" layoutY="106.0" text="Nome de usuário">
@@ -41,23 +36,17 @@
                   <Font name="Impact" size="20.0" />
                </font>
             </Label>
-            <PasswordField layoutX="14.0" layoutY="215.0" prefWidth="234.0">
+            <PasswordField fx:id="passField" layoutX="14.0" layoutY="215.0" prefWidth="234.0">
                <font>
                   <Font size="15.0" />
                </font>
             </PasswordField>
-            <TextField layoutX="14.0" layoutY="138.0" prefWidth="236.0">
+            <TextField fx:id="userField" layoutX="14.0" layoutY="138.0" prefWidth="236.0">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <Button layoutX="17.0" layoutY="271.0" mnemonicParsing="false" onAction="#loadAdministradorView" text="Login">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Button>
-            <Label layoutX="154.0" layoutY="98.0" text="*pode logar sem nada " />
-            <Button layoutX="96.0" layoutY="271.0" mnemonicParsing="false" onAction="#loadAtendenteView" text="Login atendente">
+            <Button layoutX="17.0" layoutY="271.0" mnemonicParsing="false" onAction="#verifyLogin" styleClass="primary" text="Login">
                <font>
                   <Font size="16.0" />
                </font>
